# bazel-rules-python-repo

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  gazelle_python.yaml  requirements.in
src/project_a/: BUILD.bazel  gazelle_python.yaml  requirements.txt
src/project_a/cmd/: BUILD.bazel  __main__.py
src/project_a/gpu_only_deps/: BUILD.bazel  gazelle_python.yaml  requirements.txt
src/project_a/gpu_only_deps/libs/: BUILD.bazel
src/project_a/libs/: BUILD.bazel  lib_test.py
src/project_b/: BUILD.bazel  gazelle_python.yaml  requirements.txt
src/project_b/libs/: BUILD.bazel  lib_test.py
src/python/: BUILD.bazel
src/python/cmd/: BUILD.bazel
src/python/libs/: BUILD.bazel
tools/: BUILD.bazel  lint.bzl
tools/gazelle/: BUILD.bazel
