load("@pip//:requirements.bzl", "all_requirements", "all_whl_requirements")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")
# gazelle:python_extension disabled

# Compile requirements and check that are up-to-date
# bazel run //:requirements.update
# bazel test //:requirements_test
compile_pip_requirements(
    name = "requirements",
    timeout = "moderate",
    requirements_darwin = ":requirements_darwin.txt",
    requirements_in = ":requirements.in",
    requirements_linux = ":requirements_linux.txt",
    requirements_txt = ":requirements.txt",
    requirements_windows = ":requirements_windows.txt",
)

# This rule fetches the metadata for python packages we depend on. That data is
# required for the gazelle_python_manifest rule to update our manifest file.
modules_mapping(
    name = "modules_map",
    wheels = all_whl_requirements,
)

gazelle_python_manifest(
    name = "gazelle_python",
    modules_mapping = ":modules_map",
    pip_repository_name = "pip",
    requirements = [
        ":requirements.txt",
        ":requirements_darwin.txt",
        ":requirements_linux.txt",
        ":requirements_windows.txt",
    ],
)
