bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_python", version = "0.29.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.29.0")

#### Python ####

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements.txt",
    requirements_darwin = "//:requirements_darwin.txt",
    requirements_linux = "//:requirements_linux.txt",
    requirements_windows = "//:requirements_windows.txt"
)
use_repo(
    pip,
    "pip",
)
