load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "libs",
    srcs = [
        "__init__.py",
        "lib.py",
    ],
    imports = [".."],
    visibility = ["//src:__subpackages__"],
    deps = ["@pip//tabulate"],
)

py_test(
    name = "lib_test",
    srcs = ["lib_test.py"],
    imports = [".."],
    deps = [":libs"],
)
