load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "libs",
    srcs = ["__init__.py"],
    imports = [".."],
    visibility = ["//src/project_b:__subpackages__"],
)

py_test(
    name = "lib_test",
    srcs = ["lib_test.py"],
    imports = [".."],
    deps = ["@pip_b//requests"],
)
