load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "libs",
    srcs = ["__init__.py"],
    imports = ["../.."],
    visibility = ["//src/project_a:__subpackages__"],
    deps = ["@pip_common//tabulate"],
)

py_test(
    name = "lib_test",
    srcs = ["lib_test.py"],
    imports = ["../.."],
    deps = ["@pip_gpu//requests"],
)
